# face_insightface

./: .gitignore  Makefile  benchmark.py  main.py  main_triton.py  pyproject.toml
.cursor/plans/: 电影人脸聚类_demo_29b8ab1a.plan.md
demo/: __init__.py  __main__.py  cli.py  cluster.py  db.py  frame_extract.py  html.py  schemas.py
triton_deploy/: .dockerignore  Dockerfile  Makefile  README.md  docker-compose-gpu.yml  docker-compose.yml  prepare_models.sh  requirements-client.txt
triton_deploy/client/: face_client.py  postprocess.py  preprocess.py
