[project]
name = "face-insightface"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "insightface>=0.7.3",
    "loguru>=0.7.3",
    "numpy>=1.24",
    "onnxruntime==1.20",
    "opencv-python>=4.13.0.92",
    "opencv-python-headless>=4.8",
    "pydantic>=2.0",
    "tritonclient[http]>=2.43.0",
]
